--- a/index.html
+++ b/index.html
@@ -1,101 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Simple Chat</title>
+  <meta charset="utf-8"/>
+  <title>Heart Chat</title>
   <style>
-    body { margin:0; background:#000; color:#fff; font-family:sans-serif;
+    body { margin:0; background:#000; font-family:sans-serif;
       background: url('data:image/svg+xml;utf8,\
 <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="red">\
-<text x="0" y="80" font-size="80">❤</text></svg>') center center / 200px no-repeat;}
-    #messages { height:80vh; overflow-y:scroll; padding:10px;}
-    .msg { padding:5px 10px; margin:5px 0; background:#111; position: relative;}
-    .msg .delete { position:absolute; right:5px; top:5px; cursor:pointer; color:#f55;}
-    #input { position:fixed; bottom:0; width:100%; display:flex;}
-    #input input { flex:1; padding:10px; background:#222; border:none; color:#fff;}
-    #input button { padding:10px; background:#444; border:none; color:#fff; cursor:pointer;}
+<text x="0" y="80" font-size="80">❤</text></svg>')
+      center center / 200px no-repeat; color:#fff; display:flex; flex-direction:column; height:100vh;}
+    #msgs { flex:1; overflow-y:auto; padding:10px; display:flex; flex-direction:column;}
+    .msg { background:#111; padding:8px 12px; margin-bottom:6px; position:relative; border-radius:4px; max-width:80%; }
+    .msg.mine { align-self:flex-end; background:#333; }
+    .msg .del { position:absolute; top:4px; right:6px; color:#f55; cursor:pointer; }
+    #input { display:flex; padding:10px; background:#222; }
+    #input input { flex:1; padding:10px; background:#333; border: none; color:#fff; border-radius:4px;}
+    #input button { margin-left:8px; padding:10px; background:#444; border:none; color:#fff; cursor:pointer; border-radius:4px;}
+    #status { padding:8px; text-align:center; font-size:14px; }
   </style>
 </head>
 <body>
-  <div id="messages"></div>
-  <div id="input">
-    <input id="msgin" placeholder="Type a message…" autocomplete="off" />
-    <button onclick="send()">Send</button>
-  </div>
-
-  <textarea style="position:fixed; top:0; right:0; width:0; height:0;" id="signal"></textarea>
-
+  <div id="status">Connecting...</div>
+  <div id="msgs"></div>
+  <div id="input"><input id="txt" placeholder="Type a message…"><button onclick="send()">Send</button></div>
   <script>
-    const pc = new RTCPeerConnection({iceServers:[{urls:'stun:stun.l.google.com:19302'}]});
-    let dc;
-    const messages = document.getElementById('messages');
-    function append(text, mine=false) {
-      const div = document.createElement('div');
-      div.className='msg'; div.innerText=text;
-      const del = document.createElement('span');
-      del.className='delete'; del.innerText='×';
-      del.onclick=()=>div.remove();
-      div.appendChild(del);
-      if (mine) div.style.alignSelf='flex-end';
-      messages.appendChild(div);
-      messages.scrollTop = messages.scrollHeight;
+    const status = document.getElementById('status');
+    const msgs = document.getElementById('msgs');
+    const txt = document.getElementById('txt');
+    let ws;
+
+    function add(msg, mine=false) {
+      const d = document.createElement('div');
+      d.className = 'msg' + (mine ? ' mine' : '');
+      d.textContent = msg;
+      const x = document.createElement('span');
+      x.className = 'del'; x.textContent = '×';
+      x.onclick = () => d.remove();
+      d.appendChild(x);
+      msgs.appendChild(d);
+      msgs.scrollTop = msgs.scrollHeight;
     }
-    function send(){
-      const txt = input.value;
-      if (!txt||!dc||dc.readyState!=='open') return;
-      dc.send(txt);
-      append(txt, true);
-      input.value='';
+
+    function send() {
+      const v = txt.value.trim();
+      if (!v || !ws || ws.readyState!==1) return;
+      ws.send(v);
+      add(v, true);
+      txt.value = '';
     }
-    const input = document.getElementById('msgin');
-    pc.onicecandidate = e => {
-      if (!e.candidate) {
-        signal.value = pc.localDescription.sdp;
-        signal.select();
-      }
-    };
-    pc.ondatachannel = ev=> {
-      dc = ev.channel;
-      setup();
-    };
-    function setup(){
-      dc.onopen = ()=>append('--- connected ---');
-      dc.onmessage = ev=>append(ev.data);
-    }
-    function makeOffer(){
-      dc = pc.createDataChannel('chat');
-      setup();
-      pc.createOffer().then(o=>pc.setLocalDescription(o));
-    }
-    function makeAnswer(){
-      pc.setRemoteDescription({type:'offer', sdp: signal.value});
-      pc.createAnswer().then(a=>pc.setLocalDescription(a));
-      pc.onicecandidate = e=>{
-        if (!e.candidate) {
-          signal.value = pc.localDescription.sdp;
-          signal.select();
-        }
-      };
-    }
-    function finishAnswer(){
-      pc.setRemoteDescription({type:'answer', sdp: signal.value});
-    }
-    // workflow prompts:
-    if (!location.hash){
-      append('Step 1: Click "Send Offer" then copy the SDP below and send it to friend.');
-      const btn = document.createElement('button');
-      btn.innerText='Send Offer'; btn.onclick=makeOffer;
-      messages.appendChild(btn);
-    } else {
-      append('Step 1: Paste friend’s offer SDP in the box, click "Answer".');
-      const btn = document.createElement('button');
-      btn.innerText='Answer'; btn.onclick=makeAnswer;
-      messages.appendChild(btn);
-      const btn2 = document.createElement('button');
-      btn2.innerText='Finish Answer'; btn2.onclick=finishAnswer;
-      messages.appendChild(btn2);
-    }
+
+    ws = new WebSocket('wss://heart-chat.fly.dev');
+    ws.onopen = () => status.textContent = 'Connected';
+    ws.onmessage = ev => add(ev.data, false);
+    ws.onclose = () => status.textContent = 'Disconnected';
+    ws.onerror = () => status.textContent = 'Error connecting';
   </script>
 </body>
 </html>
-
