--- a/index.html
+++ b/index.html
@@ -1,60 +1,182 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8"/>
-  <title>Heart Chat</title>
+  <title>I Said I Love You First</title>
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
   <style>
-    body { margin:0; background:#000; font-family:sans-serif;
-      background: url('data:image/svg+xml;utf8,\
-<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="red">\
-<text x="0" y="80" font-size="80">❤</text></svg>')
-      center center / 200px no-repeat; color:#fff; display:flex; flex-direction:column; height:100vh;}
-    #msgs { flex:1; overflow-y:auto; padding:10px; display:flex; flex-direction:column;}
-    .msg { background:#111; padding:8px 12px; margin-bottom:6px; position:relative; border-radius:4px; max-width:80%; }
-    .msg.mine { align-self:flex-end; background:#333; }
-    .msg .del { position:absolute; top:4px; right:6px; color:#f55; cursor:pointer; }
-    #input { display:flex; padding:10px; background:#222; }
-    #input input { flex:1; padding:10px; background:#333; border: none; color:#fff; border-radius:4px;}
-    #input button { margin-left:8px; padding:10px; background:#444; border:none; color:#fff; cursor:pointer; border-radius:4px;}
-    #status { padding:8px; text-align:center; font-size:14px; }
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background-color: #2b0e0e;
+      font-family: 'Gloria Hallelujah', cursive;
+      overflow: hidden;
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .background-template {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -55%);
+      text-align: center;
+      color: #e05757;
+      z-index: 0;
+      user-select: none;
+      pointer-events: none;
+      opacity: 1.0;
+    }
+
+    .background-template .heart {
+      font-size: 140px;
+      margin-bottom: 10px;
+    }
+
+    .background-template .stacked-text {
+      font-size: 28px;
+      line-height: 1.6;
+      white-space: pre-line;
+    }
+
+    #chat {
+      flex: 1;
+      overflow-y: auto;
+      padding: 15px 20px;
+      background-color: rgba(0, 0, 0, 0.4); /* semi-transparent */
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      position: relative;
+      z-index: 1;
+    }
+
+    .msg {
+      max-width: 65%;
+      padding: 10px;
+      border-radius: 10px;
+      font-size: 16px;
+      word-wrap: break-word;
+      backdrop-filter: blur(2px);
+      font-family: initial;
+    }
+
+    .sender {
+      align-self: flex-end;
+      background-color: #e05757;
+      color: white;
+      border-bottom-right-radius: 0;
+    }
+
+    .receiver {
+      align-self: flex-start;
+      background-color: #3d1c1c;
+      color: #fff;
+      border-bottom-left-radius: 0;
+    }
+
+    .input-row {
+      display: flex;
+      padding: 15px;
+      background-color: #1a0606;
+      border-top: 2px solid #3a1a1a;
+      position: relative;
+      z-index: 1;
+    }
+
+    input {
+      flex: 1;
+      padding: 10px;
+      font-size: 16px;
+      background-color: #3a1a1a;
+      color: white;
+      border: none;
+      border-radius: 5px;
+    }
+
+    button {
+      margin-left: 10px;
+      background-color: #e05757;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #b13f3f;
+    }
   </style>
 </head>
 <body>
-  <div id="status">Connecting...</div>
-  <div id="msgs"></div>
-  <div id="input"><input id="txt" placeholder="Type a message…"><button onclick="send()">Send</button></div>
-  <script>
-    const status = document.getElementById('status');
-    const msgs = document.getElementById('msgs');
-    const txt = document.getElementById('txt');
-    let ws;
 
-    function add(msg, mine=false) {
-      const d = document.createElement('div');
-      d.className = 'msg' + (mine ? ' mine' : '');
-      d.textContent = msg;
-      const x = document.createElement('span');
-      x.className = 'del'; x.textContent = '×';
-      x.onclick = () => d.remove();
-      d.appendChild(x);
-      msgs.appendChild(d);
-      msgs.scrollTop = msgs.scrollHeight;
-    }
+  <!-- 🔴 Heart + Love Message as Background -->
+  <div class="background-template">
+    <div class="heart">❤️</div>
+    <div class="stacked-text">
+      I<br>
+      SAID<br>
+      I<br>
+      LOVE<br>
+      YOU<br>
+      FIRST
+    </div>
+  </div>
+
+  <!-- 💬 Chat Window -->
+  <div id="chat"></div>
+
+  <!-- 🖊 Input Area -->
+  <div class="input-row">
+    <input id="msg" placeholder="Type your message..." />
+    <button onclick="send()">Send</button>
+  </div>
+
+  <script>
+    const room = "room123"; // Customize this
+    const project = "mysecretchat";
+    const ws = new WebSocket(`wss://ws.futureforce.ee/?p=${project}&r=${room}`);
+
+    const chat = document.getElementById('chat');
+    const input = document.getElementById('msg');
+
+    const sessionId = Math.random().toString(36).substr(2, 9);
+
+    ws.onmessage = e => {
+      try {
+        const data = JSON.parse(e.data);
+        addMessage(data.text, data.id === sessionId ? 'sender' : 'receiver');
+      } catch {
+        addMessage(e.data, 'receiver');
+      }
+    };
 
     function send() {
-      const v = txt.value.trim();
-      if (!v || !ws || ws.readyState!==1) return;
-      ws.send(v);
-      add(v, true);
-      txt.value = '';
+      const text = input.value.trim();
+      if (!text) return;
+
+      const message = { text, id: sessionId };
+      ws.send(JSON.stringify(message));
+      addMessage(text, 'sender');
+      input.value = '';
     }
 
-    ws = new WebSocket('wss://heart-chat.fly.dev');
-    ws.onopen = () => status.textContent = 'Connected';
-    ws.onmessage = ev => add(ev.data, false);
-    ws.onclose = () => status.textContent = 'Disconnected';
-    ws.onerror = () => status.textContent = 'Error connecting';
+    function addMessage(text, type) {
+      const msg = document.createElement("div");
+      msg.className = `msg ${type}`;
+      msg.textContent = text;
+      chat.appendChild(msg);
+      chat.scrollTop = chat.scrollHeight;
+    }
+
+    input.addEventListener("keydown", e => {
+      if (e.key === "Enter") send();
+    });
   </script>
 </body>
 </html>
-
