--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>I Said I Love You First</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
   <style>
     html, body {
@@ -46,7 +47,7 @@
       flex: 1;
       overflow-y: auto;
       padding: 15px 20px;
-      background-color: rgba(0, 0, 0, 0.4); /* semi-transparent */
+      background-color: rgba(0, 0, 0, 0.4);
       display: flex;
       flex-direction: column;
       gap: 8px;
@@ -55,7 +56,7 @@
     }
 
     .msg {
-      max-width: 65%;
+      max-width: 80%; /* increased for better fit on narrow screens */
       padding: 10px;
       border-radius: 10px;
       font-size: 16px;
@@ -80,25 +81,28 @@
 
     .input-row {
       display: flex;
+      flex-wrap: wrap; /* allows wrapping on small screens */
       padding: 15px;
       background-color: #1a0606;
       border-top: 2px solid #3a1a1a;
       position: relative;
       z-index: 1;
+      gap: 10px;
     }
 
     input {
-      flex: 1;
+      flex: 1 1 70%;
       padding: 10px;
       font-size: 16px;
       background-color: #3a1a1a;
       color: white;
       border: none;
       border-radius: 5px;
+      min-width: 0;
     }
 
     button {
-      margin-left: 10px;
+      flex: 1 1 28%;
       background-color: #e05757;
       color: white;
       border: none;
@@ -110,6 +114,36 @@
 
     button:hover {
       background-color: #b13f3f;
+    }
+
+    /* 📱 Mobile-specific styles */
+    @media (max-width: 480px) {
+      .background-template .heart {
+        font-size: 100px;
+      }
+
+      .background-template .stacked-text {
+        font-size: 22px;
+      }
+
+      .msg {
+        font-size: 15px;
+        max-width: 90%;
+      }
+
+      .input-row {
+        flex-direction: column;
+        padding: 10px;
+      }
+
+      input, button {
+        width: 100%;
+        font-size: 15px;
+      }
+
+      button {
+        margin-left: 0;
+      }
     }
   </style>
 </head>
