--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       height: 100%;
       background-color: #2b0e0e;
       font-family: 'Gloria Hallelujah', cursive;
-      overflow: hidden;
+      overflow: auto; /* ✅ allows content to adjust */
     }
 
     body {
@@ -23,13 +23,13 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -80%); /* Fixed from -55% */
+      transform: translate(-50%, -40%); /* ✅ moved down */
       text-align: center;
       color: #e05757;
       z-index: 0;
       user-select: none;
       pointer-events: none;
-      opacity: 1.0;
+      opacity: 1;
     }
 
     .background-template .heart {
@@ -39,7 +39,7 @@
 
     .background-template .stacked-text {
       font-size: 28px;
-      line-height: 1.4; /* Reduced for better spacing */
+      line-height: 1.4;
       white-space: pre-line;
     }
 
@@ -51,7 +51,6 @@
       display: flex;
       flex-direction: column;
       gap: 8px;
-      position: relative;
       z-index: 1;
     }
 
@@ -81,17 +80,16 @@
 
     .input-row {
       display: flex;
-      flex-wrap: wrap;
-      padding: 15px;
+      align-items: center;
+      padding: 10px;
       background-color: #1a0606;
       border-top: 2px solid #3a1a1a;
-      position: relative;
       z-index: 1;
       gap: 10px;
     }
 
     input {
-      flex: 1 1 70%;
+      flex-grow: 1;
       padding: 10px;
       font-size: 16px;
       background-color: #3a1a1a;
@@ -102,11 +100,11 @@
     }
 
     button {
-      flex: 1 1 28%;
+      flex-shrink: 0;
       background-color: #e05757;
       color: white;
       border: none;
-      padding: 10px 20px;
+      padding: 10px 16px;
       font-size: 16px;
       border-radius: 5px;
       cursor: pointer;
@@ -116,44 +114,35 @@
       background-color: #b13f3f;
     }
 
-    /* 📱 Mobile-specific styles */
-@media (max-width: 480px) {
-  .background-template .heart {
-    font-size: 100px;
-  }
+    /* ✅ Optional: For better handling on very small screens */
+    @media (max-width: 400px) {
+      .background-template .heart {
+        font-size: 100px;
+      }
 
-  .background-template .stacked-text {
-    font-size: 22px;
-  }
+      .background-template .stacked-text {
+        font-size: 20px;
+      }
 
-  .msg {
-    font-size: 15px;
-    max-width: 90%;
-  }
+      .msg {
+        font-size: 15px;
+        max-width: 90%;
+      }
 
-  .input-row {
-    flex-direction: row; /* 👈 changed from column */
-    padding: 10px;
-    gap: 10px;
-  }
+      input {
+        font-size: 15px;
+      }
 
-  input {
-    flex: 1 1 70%;
-    font-size: 15px;
-  }
-
-  button {
-    flex: 1 1 30%;
-    font-size: 15px;
-    margin-left: 0;
-  }
-}
-
+      button {
+        font-size: 15px;
+        padding: 10px 12px;
+      }
+    }
   </style>
 </head>
 <body>
 
-  <!-- 🔴 Heart + Love Message as Background -->
+  <!-- 🔴 Heart + Message -->
   <div class="background-template">
     <div class="heart">❤️</div>
     <div class="stacked-text">
@@ -169,14 +158,14 @@
   <!-- 💬 Chat Window -->
   <div id="chat"></div>
 
-  <!-- 🖊 Input Area -->
+  <!-- 🖊 Input and Button -->
   <div class="input-row">
     <input id="msg" placeholder="Type your message..." />
     <button onclick="send()">Send</button>
   </div>
 
   <script>
-    const room = "room123"; // Customize this if needed
+    const room = "room123";
     const project = "mysecretchat";
     const ws = new WebSocket(`wss://ws.futureforce.ee/?p=${project}&r=${room}`);
 
@@ -196,7 +185,6 @@
     function send() {
       const text = input.value.trim();
       if (!text) return;
-
       const message = { text, id: sessionId };
       ws.send(JSON.stringify(message));
       addMessage(text, 'sender');
