--- a/index.html
+++ b/index.html
@@ -79,36 +79,38 @@
     }
 
     .input-row {
-      display: flex;
-      align-items: center;
-      padding: 10px;
-      background-color: #1a0606;
-      border-top: 2px solid #3a1a1a;
-      z-index: 1;
-      gap: 10px;
-    }
+  display: flex;
+  flex-wrap: nowrap; /* Prevent wrapping */
+  align-items: center;
+  padding: 10px;
+  background-color: #1a0606;
+  border-top: 2px solid #3a1a1a;
+  gap: 10px;
+  z-index: 1;
+}
 
-    input {
-      flex-grow: 1;
-      padding: 10px;
-      font-size: 16px;
-      background-color: #3a1a1a;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      min-width: 0;
-    }
+input {
+  flex-grow: 1;       /* Take remaining space */
+  min-width: 0;       /* Allow shrinking */
+  padding: 10px;
+  font-size: 16px;
+  background-color: #3a1a1a;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
 
-    button {
-      flex-shrink: 0;
-      background-color: #e05757;
-      color: white;
-      border: none;
-      padding: 10px 16px;
-      font-size: 16px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
+button {
+  flex-shrink: 0;     /* Prevent shrinking */
+  width: 80px;        /* Fixed width for consistency */
+  background-color: #e05757;
+  color: white;
+  border: none;
+  padding: 10px 0;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
     button:hover {
       background-color: #b13f3f;
