--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
     .background-template .stacked-text {
       font-size: 28px;
-      line-height: 1.4;
+      line-height: 1.2;
+      font-weight: 600;
       white-space: pre-line;
     }
 
